<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView 
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:src="@drawable/ic_hardware_keyboard_arrow_left_cyan"
                />

            <Button
                android:id="@+id/btn_home"
			    android:layout_width="wrap_content"
			    android:layout_height="match_parent"
                android:background="@null"
                android:onClick="onClick"
                android:layout_marginLeft="-15dp"
                android:gravity="center_vertical"
                android:text="@string/title_home"
                android:textColor="@color/CYAN" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_result"
            android:textColor="@color/BLACK"
            android:textSize="18sp"
            android:textStyle="bold" /> 
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/result_click_item"
            android:textColor="@color/BLACK" />        
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_bot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_total"
            android:textColor="@color/BLACK" />

        <TextView
            android:id="@+id/txt_result_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:textColor="@color/BLACK" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/result_correct"
            android:textColor="@color/BLACK" />

        <TextView
            android:id="@+id/txt_result_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:textColor="@color/GREEN" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/result_score"
            android:textColor="@color/BLACK" />

        <TextView
            android:id="@+id/txt_result_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60"
            android:textColor="@color/GREEN" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bot"
        android:layout_below="@id/layout_top"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/BLACK"
            android:orientation="horizontal"
            android:paddingTop="5dp" 
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/result_bar_question" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/GRAY_HINT" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/result_bar_choice" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/GRAY_HINT" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/result_bar_answer" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/GRAY_HINT" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/result_bar_score" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000" >
        </ListView>
    </LinearLayout>

</RelativeLayout>