<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/WHITE"
    android:padding="5dp" >

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_title_caution"
        android:textColor="@color/BLACK"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <TextView 
        android:id="@+id/txt_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_ask_download_data"
        android:textColor="@color/BLACK"     
        android:textSize="16sp"   
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/btn_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/dialog_ok"
            android:textColor="@color/WHITE"
            android:background="@drawable/selector_btn_select"
            />      
    </LinearLayout>

</LinearLayout>