<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/WHITE"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_title_caution"
        android:textColor="@color/BLACK"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginRight="10dp"
                android:text="@string/dialog_file_size"
                android:textColor="@color/BLACK"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_dialog_file_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_marginLeft="10dp"                
                android:textColor="@color/BLACK"
                android:textSize="16sp" />
        </LinearLayout>
       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginRight="10dp"
                android:text="@string/dialog_file_progress"
                android:textColor="@color/BLACK"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_dialog_file_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_marginLeft="10dp"                
                android:textColor="@color/BLACK"
                android:textSize="16sp" />
        </LinearLayout>     
        <ProgressBar
            android:id="@+id/prg_dialog_download"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/progressbar" />           
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/selector_btn_select"
            android:gravity="center"
            android:text="@string/dialog_ok"
            android:textColor="@color/WHITE" />
    </LinearLayout>

</LinearLayout>