<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:src="@drawable/ic_hardware_keyboard_arrow_left_cyan" />

            <Button
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="-15dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:text="@string/title_setting"
                android:textColor="@color/CYAN" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_name"
            android:textColor="@color/BLACK"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_top_under"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_top"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/GRAY_UNDER_BAR" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shadow_below" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp" >

        <LinearLayout
            android:id="@+id/layout_sample_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible" >

            <TextView
                android:id="@+id/btn_sample_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:text="@string/home_take_sample_test"
                android:textColor="@color/BLACK" />

            <Button
                android:id="@id/btn_sample_test"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/selector_btn_sample"
                android:onClick="onClick" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/img_sync"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_sync_black_24dp" />
        </LinearLayout>
    </LinearLayout>

	<ListView 
        android:id="@+id/list_exam"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bot"
        android:layout_below="@id/layout_top_under"
        android:cacheColorHint="@android:color/transparent"
        android:listSelector="@android:color/transparent" 
        android:divider="@color/GRAY_UNDER_BAR"
        android:dividerHeight="1px"	    
	    ></ListView>

</RelativeLayout>